--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul id="menu">
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/About.html">About Us</a></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
+                        <li><a href="">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
