website phase1 completed

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/image/Icon-05.png">
-    <title>Contact</title>
-    <link rel="stylesheet" href="/bootstrap-5.0.0-beta1-dist/css/bootstrap.css">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="/bootstrap-5.0.0-beta1-dist/css/bootstrap.css  ">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <!-- header part start -->
     <div id="header">
         <div class="container">
             <div class="row">
@@ -20,78 +19,51 @@
                 </div>
                 <div class="col-md-8">
                     <ul id="menu">
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/About.html">About Us</a></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
+                        <li><a class="btn" href="/index.html">Home</a></li>
+                        <li><a class="btn active" href="/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </div> 
 
-    <!-- header part end -->
-
-    <!-- contact part start -->
-
-    <div class="container-fluid contact">
-        <div class="row content">
-            <div class="col-md-12">
-                <h2>Contact us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui accusantium molestias veritatis vero corporis illum asperiores aut deleniti repudiandae maiores quam ducimus iusto, culpa tempora numquam iure, et suscipit! Delectus odio temporibus vitae laboriosam nisi voluptatum sed dolorum tenetur explicabo, eaque exercitationem incidunt? Aspernatur, distinctio. Mollitia exercitationem perspiciatis vel odio!</p>
-            </div>
-        </div>
-        <div class="row cont">
-            <div class="col-md-6 contactinfo">
-                <div class="box">
-                    <div class="icon">
-                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+    <div class="bg">
+        <div class="container">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="center">
+                    <div class="box">
+                        <div class="icon">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        </div>
+                        <div class="text-1">
+                            <h3>Address</h3>
+                            <p>Mahim (East), Mumbai 400017</p>
+                        </div>
                     </div>
-                    <div class="text-1">
-                        <h3>Address</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, possimus.</p>
+                    <div class="box">
+                        <div class="icon">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                        </div>
+                        <div class="text-1">
+                            <h3>Contact</h3>
+                            <p>+91 9819067462</p>
+                        </div>
                     </div>
-                </div>
-                <div class="box">
-                    <div class="icon">
-                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                    </div>
-                    <div class="text-1">
-                        <h3>E-mail</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, possimus.</p>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="icon">
-                        <i class="fa fa-phone-square" aria-hidden="true"></i>
-                    </div>
-                    <div class="text-1">
-                        <h3>Phone</h3>
-                        <p>+91 8286873687</p>
+                    <div class="box">
+                        <div class="icon">
+                            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        </div>
+                        <div class="text-1">
+                            <h3>Whatsapp</h3>
+                            <p>+91 9819067462</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 contactform">
-                <form> 
-                    <h2>Send Message</h2>
-                    <div class="inputbox">
-                        <input type="text" name="" required>
-                        <span>Full Name</span>
-                    </div>
-                    <div class="inputbox">
-                        <input type="text" name="" required>
-                        <span>E-mail</span>
-                    </div>
-                    <div class="inputbox">
-                        <textarea required></textarea>
-                        <span>Type your Message...</span>
-                    </div>
-                    <div class="inputbox">
-                        <input type="Submit" name="" value="Send">
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-    
-</body>
+   
+
 </html>
