--- a/highlight/highlight-1.html
+++ b/highlight/highlight-1.html
@@ -15,13 +15,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h1 id="logo">AceHaverS@ck</h1>
+                    <h1 hre id="logo">AceHaverS@ck</h1>
                 </div>
                 <div class="col-md-8">
                     <ul id="menu">
                         <li><a href="/index.html">Home</a></li>
-                        <li><a href="/About.html">About Us</a></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -29,7 +27,7 @@
     </div> 
     <div class="container">
         <div class="row box2">
-            <div class=" col-md-6 show">
+            <div class=" col-md-6 col-sm-6 show">
               <div class="mySlides">
                 <img src="/image/college/tommy.jpg" style="width:100%">
               </div>
@@ -51,7 +49,7 @@
               <a class="prev" onclick="plusSlides(-1)">❮</a>
               <a class="next" onclick="plusSlides(1)">❯</a>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="info">
                     <h1>Tommy Highilfer Bag</h1>
                     <p>Compartment: 3 <br>
@@ -60,25 +58,12 @@
                         Bag Type: Shoulder Bag<br>
                         Made in India with❤️<br>
                         Price: 150/-</p><br>
-                    <h3><b>For Purchase Plz Messege Us On This Number +91 8286873687</b></h3>
+                    <h3><b>To purchase contact us +91 9819067462</b></h3>
                 </div>
             </div>
     </div>
 </div>
-<div id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 size">Copyright@2021 AcehaverS@ck</div>
-            <div class="col-md-6">
-                <ul id="social-icons" class="float-md-right">
-                    <li><a href="https://www.facebook.com/acehaversack" target="-blank" class="fa fa-facebook-square"></a></li>
-                    <!-- <li><a href="" class="fa fa-twitter-square"></a></li>
-                    <li><a href="" class="fa fa-linkedin-square"></a></li> -->
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+
 <script src="/js/script.js"></script>
 </body>
 </html>
