--- a/highlight/highlight-4.html
+++ b/highlight/highlight-4.html
@@ -20,8 +20,6 @@
                 <div class="col-md-8">
                     <ul id="menu">
                         <li><a href="/index.html">Home</a></li>
-                        <li><a href="/About.html">About Us</a></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -67,25 +65,12 @@
                         2 Wheels Trolley Suitcase<br>
                         Price 1700/-<br>
                         Made in India with❤️<br>
-                    <h3><b>For Purchase Plz Messege Us On This Number +91 8286873687</b></h3>
+                        <h3><b>To purchase contact us +91 9819067462</b></h3>
                 </div>
-            </div>
-    </div>
-</div>
-<div id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 size">Copyright@2021 AcehaverS@ck</div>
-            <div class="col-md-6">
-                <ul id="social-icons" class="float-md-right">
-                    <li><a href="https://www.facebook.com/acehaversack" target="-blank" class="fa fa-facebook-square"></a></li>
-                    <!-- <li><a href="" class="fa fa-twitter-square"></a></li>
-                    <li><a href="" class="fa fa-linkedin-square"></a></li> -->
-                </ul>
             </div>
         </div>
     </div>
-</div>
+
 <script src="/js/script.js"></script>
 </body>
 </html>
