--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div id="header">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <h1 id="logo">AceHaverS@ck</h1>
+                <div class="col-md-4 col-sm-12" id="logo">
+                    <a href="/index.html"><h1>AceHaverS@ck</h1></a>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-2">
                     <ul id="menu">
-                        <li><a class="btn active" href="/index.html">Home</a></li>
-                        <li><a class="btn" href="/contact.html">Contact Us</a></li>
+                        <li><a class=" active" href="/index.html">Home</a></li>
+                        <li><a href="/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,13 +43,13 @@
     <!-- Header Part End -->
 
     <!-- HighLight Part Start -->
-    <div class="container some">
+    <!-- <div class="container some">
         <div class="row">
             <div class="col-md-12">
                 <h1>Highlight</h1>
                 <hr>
             </div>
-            <div class="col-lg-2 col-md-6 container-123">
+            <div class="col-lg-2 col-md-6 col-sm- container-123">
                 <img src="/image/college/tommy.jpg" alt="image">
                 <div class="overlay">
                     <div class="text">Tommy Highilfer Bag</div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- HighLight Part End -->
 
