--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
     <div id="header">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <h1 id="logo">AceHaverS@ck</h1>
+                <div class="col-md-4 col-sm-12" id="logo">
+                    <a href="/index.html"><h1>AceHaverS@ck</h1></a>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-6">
                     <ul id="menu">
-                        <li><a class="btn" href="/index.html">Home</a></li>
-                        <li><a class="btn active" href="/contact.html">Contact Us</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a class="active" href="/contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
