--- a/index.html
+++ b/index.html
@@ -160,20 +160,6 @@
             <div class="col-md-2 box1">
                 <img src="/image/kids/kid-picnic-bag-1.jpg" alt="images">
                 <div class="content1">
-                    <h3>New Cars Bag</h3>
-                    <p>Style: Picnic Kit Bag. <br>
-                        Ideal For Men & Women. <br>
-                        Closure Type: Zipper. <br>
-                        Shoulder Strap: Yes. <br>
-                        Handle Features: Shoulder strap Handle. <br>
-                        To  purchase contact us <b>+91 9819067462</b>
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-md-2 box1">
-                <img src="/image/kids/kid-picnic-bag-1.jpg" alt="images">
-                <div class="content1">
                     <h3>New Spider-Man Bag</h3>
                     <p>Style: Picnic Kit Bag. <br>
                         Ideal For Men & Women. <br>
@@ -604,7 +590,7 @@
     <!-- school/college part -->
 
     <div class="container main1 some-1">
-        <h2>School / College Bags</h2>
+        <h2>School/College Bags</h2>
         <div class="row sell">
             <div class="col-md-2 box1">
                 <img src="/image/college/Adidas-1.jpg" alt="images">
@@ -1071,7 +1057,7 @@
 
     
     <div class="container some-1">
-        <h2>Travels Bags</h2>
+        <h2>Travel Bags</h2>
         <div class="row sell">
             <div class="col-md-2 box1">
                 <img src="/image/travel/gym-2.jpg" alt="images">
