--- a/index.html
+++ b/index.html
@@ -521,11 +521,11 @@
             <div class="col-md-2 box1">
                 <img src="/image/college/fastrack-1.jpg" alt="images">
                 <div class="content1">
-                    <h3>Adidas Bag </h3>
-                    <p> Compartment: 4 <br>
+                    <h3>fastrack Bag </h3>
+                    <p> Compartment: 3<br>
                         Laptop Sleeve: Yes<br>
-                        Color Code: Gray/Blue<br>
-                        Color Available: Red, Pink, Black<br>
+                        Color Code: Red<br>
+                        Color Available: Blue, Pink, Black<br>
                         Bag Type: Shoulder Bag<br>
                         Made in India with❤️<br>
                         Price: 250/-<br>
