--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                 <img src="/image/kids/barbie.jpg" alt="images">
                 <div class="content1">
                     <h3>Barbie Kids Bag</h3>
-                    <p> <b>Code : </b> <br>
-                        Compartment: 1. <br>
+                    <p> Compartment: 1. <br>
                         Bag Type: Handle Bag. <br>
                         Also available in Doremon, Motu Patlu, Barbie, Chota Bheem. <br>
                         To  purchase contact us <b>+91 9819067462</b>
