--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <img src="/image/kids/barbie.jpg" alt="images">
                 <div class="content1">
                     <h3>Barbie Kids Bag</h3>
-                    <p> code : 001 <br>
+                    <p> Code : 001 <br>
                         Compartment: 1. <br>
                         Bag Type: Handle Bag. <br>
                         Also available in Doremon, Motu Patlu, Barbie, Chota Bheem. <br>
@@ -123,7 +123,7 @@
                 <img src="/image/kids/Big_Doremon.jpg" alt="images">
                 <div class="content1">
                     <h3>Doremon Kids Bag</h3>
-                    <p>code : S01 <br>
+                    <p>Code : S01 <br>
                         Compartment : 3 <br>
                         Bag Size : Medium <br>
                         Closure : One Zipper <br>
@@ -139,7 +139,7 @@
                 <img src="/image/kids/captain-america.jpg" alt="images">
                 <div class="content1">
                     <h3>Digital Avenger Bag</h3>
-                    <p> code : S02 <br>
+                    <p> Code : S02 <br>
                         Compartment : 4 <br>
                         Bag Size : Medium <br>
                         Closure : One Zipper <br>
