updated navbar & added bottom to top btn

--- a/contact.html
+++ b/contact.html
@@ -11,21 +11,20 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div id="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-12" id="logo">
-                    <a href="/index.html"><h1>AceHaverS@ck</h1></a>
-                </div>
-                <div class="col-md-8 col-sm-6">
-                    <ul id="menu">
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a class="active" href="/contact.html">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
+      <!-- header section start -->
+      <header>
+        <a href="/index.html" class="brand">AceHaverS@ck</a>
+        <div class="menu-btn"></div>
+        <div class="navigation">
+            <a href="/index.html">Home</a>
+            <!-- <a href="#kids">Kids</a>
+            <a href="#school/college">School/College</a>
+            <a href="#gym/travel">Travel</a>
+            <a href="#pouch">Pouch</a> -->
+            <!-- <a href="/contact.html">Contact</a> -->
         </div>
-    </div> 
+    </header>
+    <!-- header section end -->
 
     <div class="bg">
         <div class="container">
@@ -65,5 +64,5 @@
         </div>
     </div>
    
-
+    <script src="/js/script.js"></script>
 </html>
