--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     
       <!-- header section start -->
     <header>
-        <a href="/index.html" class="brand">AceHaverS@ck</a>
+        <div>
+            <a href="/index.html" class="brand">AceHaverS@ck</a>
+            <div class="tag-line">
+                <span>If You Love It, Buy It!</span>
+            </div>
+        </div>
         <div class="menu-btn"></div>
         <div class="navigation">
             <a href="/index.html">Home</a>
@@ -34,12 +39,12 @@
 
     <!-- home section starts  -->
     <section class="home" id="home">
-        <div class="content">
+        <!-- <div class="content">
           <h3>If You Love It, Buy It! (Otherwise Someone Esle Will!)</h3>
         </div>
         <div class="image">
-          <img src="/image/AceS@ck-01.jpg" alt="">
-      </div>
+          <img src="/image/" alt="">
+      </div> -->
     </section>
     <!-- home section ends -->
 
@@ -105,7 +110,7 @@
     <!-- Sell Part Start -->
 
     <div id="kids" class="container main1 some-1">
-        <h2>Kids Bag</h2>
+        <h2>Kids</h2>
         <div class="row sell">
             <div class="col-md-2 box1">
                 <img src="/image/kids/barbie.jpg" alt="images">
@@ -552,7 +557,7 @@
     <!-- school/college section start -->
 
     <div id="school/college" class="container main1 some-1">
-        <h2>School/College/Tution Bag</h2>
+        <h2>School/College</h2>
         <div class="row sell">
             <div class="col-md-2 box1">
                 <img src="/image/college/nike-sc-bag.jpg" alt="images">
@@ -1062,7 +1067,7 @@
     <!-- travel section start -->
     
     <div id="gym/travel" class="container some-1">
-        <h2>Travel Bag</h2>
+        <h2>Travel</h2>
         <div class="row sell">
             <div class="col-md-2 box1">
                 <img src="/image/travel/travel-7.jpg" alt="images">
@@ -1314,6 +1319,7 @@
         </div>
     </div>        
     <!-- tiffin section end -->
+
 
 
     <!-- sell part end -->
