--- a/index.html
+++ b/index.html
@@ -1203,6 +1203,21 @@
             </div>
 
             <div class="col-md-2 box1">
+                <img src="/image/travel/Skybag-1-min.jpg" alt="images">
+                <div class="content1">
+                    <h3>Trolley Bag</h3>
+                    <p> Code :  <br>
+                        Size :  <br>
+                        2 Storage Compartment(1 Large & 1 Small). <br>
+                        Color Available: Black, Red etc. <br>
+                        To  purchase contact us <b>+91 9819067462</b> <br>
+                        Rs : 2500/- <br>
+                        Made in India with❤️ <br> 
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-2 box1">
                 <img src="/image/travel/Travel-6-min.jpg" alt="images">
                 <div class="content1">
                     <h3>Travel Duffel Bag (Red)</h3>
@@ -1264,7 +1279,25 @@
                     <h3>SkyBag GymBag</h3>
                     <p>Code : A16 <br> 
                         Style: Kit Bag. <br>
-                        Also Available In Different <Color class="br"></Color>
+                        Also Available In Different <br>
+                        Ideal For Men & Women. <br>
+                        Closure Type: Zipper. <br>
+                        Shoulder Strap: Yes, Adjustable Shoulder Strap. <br>
+                        Hip Strap: No. <br>
+                        To  purchase contact us <b>+91 9819067462</b> <br>
+                        Rs : 220/- <br>
+                        Made in India with❤️<br>
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-2 box1">
+                <img src="/image/travel/Skybags-2-min.jpg" alt="images">
+                <div class="content1">
+                    <h3>SkyBag GymBag</h3>
+                    <p>Code : A16 <br> 
+                        Style: Kit Bag. <br>
+                        Also Available In Different <br>
                         Ideal For Men & Women. <br>
                         Closure Type: Zipper. <br>
                         Shoulder Strap: Yes, Adjustable Shoulder Strap. <br>
